manifests/concourse-ci/overlays/concourse-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concourse-web
  namespace: concourse
spec:
  template:
    spec:
      containers:
        - name: concourse-web
      volumes:
        - name: web-tls
          secret:
            defaultMode: 256
            items:
              - key: tls.crt
                path: client.cert
              - key: tls.key
                path: client.key
            secretName: concourse-web-tls
